Added routing to navegate between pages

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -27,7 +27,7 @@ dateTitle=Order Date
 
 
 # Detail Page
-detailPageTitle=Walkthrough - Details
+detailPageTitle=Invoice - Details
 ratingConfirmation=You have rated this product with {0} stars
 
 # Product Rating
